Corrected alignment of footer social media icons, and increased their size by .5rem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,7 +381,11 @@ button {
 }
 
 .footer-social-icons {
+    padding-left: 0;
     margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer-social-icons li {
@@ -390,8 +394,8 @@ button {
 }
 
 .footer-social-icons li a {
-    font-size: 2rem;
-    padding: 0 20px;
+    font-size: 2.5rem;
+    padding: 10px 20px;
     text-decoration: none;
     color: rgb(70, 70, 70);
 }
